# mlflow_cc

./: load_model_example.py  mlflow_example.py  pyproject.toml
mlartifacts/474250338936370299/39562edd925d4a0bb264fb156c482203/artifacts/iris_model/: MLmodel
mlartifacts/474250338936370299/5f8ac50557d141f7bb55ba73b80dc692/artifacts/iris_model/: MLmodel  conda.yaml
mlruns/0/: meta.yaml
mlruns/474250338936370299/: meta.yaml
mlruns/474250338936370299/39562edd925d4a0bb264fb156c482203/: meta.yaml
mlruns/474250338936370299/39562edd925d4a0bb264fb156c482203/metrics/: accuracy
mlruns/474250338936370299/39562edd925d4a0bb264fb156c482203/tags/: mlflow.log-model.history  mlflow.runName
mlruns/474250338936370299/5f8ac50557d141f7bb55ba73b80dc692/: meta.yaml
mlruns/474250338936370299/5f8ac50557d141f7bb55ba73b80dc692/metrics/: accuracy
mlruns/474250338936370299/5f8ac50557d141f7bb55ba73b80dc692/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/models/tracking-quickstart/: meta.yaml
mlruns/models/tracking-quickstart/version-1/: meta.yaml
mlruns/models/tracking-quickstart/version-2/: meta.yaml
mlruns/models/tracking-quickstart/version-3/: meta.yaml
