[project]
name = "mlflow"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tysonbarretto", email = "tysonbarretto1991@gmail.com"},
]
dependencies = [
    "mlflow>=2.17.0",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
